2009-11-06  Jonathan Pryor  <jpryor@novell.com>

	* Mono.Rocks.csproj: Remove the BeforeBuild requirement.  This breaks
	  VS usage when Perl isn't installed.  We'll need to remove the Perl
	  dependency if we want to have BeforeBuild work.

2009-11-04  Jonathan Pryor  <jpryor@novell.com>

	* Mono.Rocks.Tests.dll.sources: Add EquatableContract.cs to
	  the build.

2009-11-03  Jonathan Pryor  <jpryor@novell.com>

	* Mono.Rocks.csproj: Use a saner file generation process.

2009-11-03  Jonathan Pryor  <jpryor@novell.com>

	* Mono.Rocks.csproj: Makefile functionality import: If the mk* files
	  are newer than the files they generate, re-run the mk* programs to
	  generate their output files before building.  Add a 'shell' target;
	  note that the 'shell' target doesn't work, as stdout/stderr isn't
	  visible interactively.
	* Mono.Rocks.sln: Flush.

2009-10-28  Jonathan Pryor  <jpryor@novell.com>

	* Mono.Rocks.Tests.dll.sources, Tests/Mono.Rocks.Tests.csproj:
	  Add Mono.Rocks.Tests/IEnumerableContract.cs to the build.

2009-10-27  Jonathan Pryor  <jpryor@novell.com>

	* Mono.Rocks.dll.sources, Mono.Rocks.csproj:
	  Add Mono.Rocks/CachedSequence.cs to the build.
	* Mono.Rocks.Tests.dll.sources, Tests/Mono.Rocks.Tests.csproj:
	  Add Mono.Rocks.Tests/CachedSequenceTest.cs to the build.

2009-09-23	Eric Maupin	<me@ermau.com>

	* Mono.Rocks.dll.sources, Mono.Rocks.csproj:
	  Add Mono.Rocks/OrderedDictionary.cs to the build.
	* Mono.Rocks.Tests.dll.sources, Tests/Mono.Rocks.Tests.csproj:
	  Add Mono.Rocks.Tests/OrderedDictionaryTest.cs to the build.

2009-09-17  Jonathan Pryor  <jpryor@novell.com>

	* lib/monodoc/sources/mono-rocks-docs.source: Place documentation into
	  the correct node (for more recent versions of monodoc).

2009-06-11  Jonathan Pryor  <jpryor@novell.com>

	* Mono.Rocks.dll.sources, Mono.Rocks.csproj: Add 
	  Mono.Rocks/ReadOnlyDictionary.cs to the build.
	* Mono.Rocks.Tests.dll.sources, Tests/Mono.Rocks.Tests.csproj: Add