@@ -1,3 +1,7 @@
+2009-11-06  Eric Maupin  <me@ermau.com>
+
+	* MutableLookupTest.cs : Added; Tests for MutableLookup<TKey,TElement>
+
 2009-11-04  Jonathan Pryor  <jpryor@novell.com>
 
 	* EquatableContract.cs: Added; contract for the IEquatable<T>
